# personalWebService

./: .gitignore  .output.txt  Cargo.toml  note.txt
deployment/google/: cors.json
deployment/guide/: rust_backend_deployment_build_anywhere_deploy_to_var_www.md  rust_backend_deployment_update_guide.md
deployment/systemd/: rust-backend.service
openapi/: auth_openapi.yaml
resource/db/: 002_performance_editor.sql
src/: app.rs  lib.rs  main.rs
src/application/: errors.rs  mod.rs
src/application/services/: mod.rs  services.rs
src/application/services/auth/: auth_service.rs  auth_services.rs  jwt_service.rs  mod.rs  password_service.rs  result.rs
src/application/services/profile/: mod.rs  profile_services.rs  result.rs  service.rs
src/application/services/website/: mod.rs  website_services.rs
src/application/use_cases/: mod.rs  use_case.rs
src/application/use_cases/application/: mod.rs
src/application/use_cases/auth/: mod.rs
src/application/use_cases/profile/: mod.rs  profile_use_cases.rs
src/config/: config.rs
src/delivery/http/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/infrastructure/: infrastructure.rs  mod.rs  repositories.rs
src/infrastructure/analytics/: mod.rs
src/infrastructure/cloud_storage/: cloud_storage.rs  mod.rs
src/infrastructure/db/: databases.rs  mod.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/repository_impl/: mod.rs
src/interface_adapters/: mod.rs
src/interface_adapters/gateways/: mod.rs
src/shared/utils/: markdown.rs
tests/: health_check.rs
(+161 files in other folders)
