[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
google-cloud-storage = { version = "0.23.0" }
google-cloud-auth = "0.17.0"
image = "0.25.5"
tower-http = { version = "0.6.8", features = ["catch-panic", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower = { version = "0.5.2", features = ["util"] }
jsonwebtoken = "9.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
